fixed z-index problem

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ a {
 
 .leftside {
     position: absolute;
-    z-index: -2;
+    z-index: 3;
     background: rgb(245, 211, 19);
     background: linear-gradient(140deg, rgba(245, 211, 19, 1) 0%, rgba(133, 205, 50, 1) 100%);
     width: 50%;
@@ -44,7 +44,7 @@ a {
 .leftimg {
     -webkit-user-drag: none;
     position: absolute;
-    z-index: -1;
+    z-index: 2;
     opacity: 20%;
     width: 100%;
     height: 100vh;
@@ -59,7 +59,7 @@ a {
 }
 
 .rightside {
-    z-index: -3;
+    z-index: 1;
     position: absolute;
     display: flex;
     align-items: center;
